# Surveam

./: .gitignore  README.md  io.github.jspast.SteamSurveyExplorer.json  io.github.jspast.Surveam.json  meson.build
.github/workflows/: main.yml
build-aux/: io.github.jspast.SteamSurveyExplorer.json  io.github.jspast.Surveam.json  python-dependencies.json  python3-matplotlib.json  steam-survey-explorer.iss
data/: io.github.jspast.SteamSurveyExplorer.desktop.in  io.github.jspast.SteamSurveyExplorer.gschema.xml  io.github.jspast.SteamSurveyExplorer.gschema.xml.in  io.github.jspast.SteamSurveyExplorer.metainfo.xml.in  io.github.jspast.Surveam.desktop.in  io.github.jspast.Surveam.gschema.xml  io.github.jspast.Surveam.metainfo.xml.in  io.github.jspast.Surveam.service.in  mapping.csv  meson.build  steam_survey_explorer.gresource.xml.in
data/icons/: meson.build
data/styles/: adwaita-dark.mplstyle  adwaita.mplstyle
doc/: steam-survey.md  surveam.md
po/: POTFILES  POTFILES.in  meson.build  pt_BR.po  steam-survey-explorer.pot
src/: category_window.py  cli_tool.py  data.py  graph.py  main.py  meson.build  steam-survey-explorer.in  steam_survey_explorer.gresource.xml  steam_survey_explorer.gresource.xml.in  surveam.gresource.xml  surveam.in  window.blp  window.py  window.ui
src/db/: arquivos.txt  data.py  database.py  load_data.py  patricia.py  test_combined.csv  test_platform.csv  trie.py
src/ui/: about.blp  about_dialog.blp  category_box.blp  category_window.blp  main_window.blp
